# comse6998-applied-ml-cloud-project

./: .gitignore  HOW_TO_UV.md  README.md  pyproject.toml
docs/: README.md
infra/: Pulumi.main.yaml  Pulumi.yaml  README.md  __main__.py  ansible.cfg  build_triton_container_image.py  deploy_model.py  inventory.gcp.yaml  inventory.yaml  playbook.yaml  state_backend.py  web_server.py
infra/config/: ansible.cfg
infra/stack_deploy/: README.md  build_triton_container_image.py  deploy_model.py
infra/stack_dev/: __main__.py
models/: README.md
models/models/: resnet50_int8.pt
models/src/: classify_data.py  init.py  init_resnet_50.py  quantize_resnet50.py  run_resnet50_base.py  run_resnet50_int8.py  run_resnet50_prune.py  run_resnet50_sparse.py  run_trt_fp32.py  utils.py
models/test/: triton_model_sandbox.py
web/: README.md  web_server.py
