[project]
name = "infra"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu126"

[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.nvidia.com"

[tool.uv.sources]
torch-tensorrt = { index = "pytorch" }

[dependency-groups]
infra = [
    "ansible>=10.7.0",
    "pulumi>=3.163.0",
    "pulumi-gcp>=8.27.0",
]
models = [
    "numpy>=1.26.0",
    "pillow>=11.0.0",
    "torch==2.6.0",
    "torchvision>=0.20.0",
    "torch-tensorrt"
]
