[project]
name = "applied-ml-cloud-project"
version = "0.1.0"
description = "Applied ML in the Cloud Project - A Study of Optimization Techniques for a Scalable Image Classification Inference Service on the Cloud"
readme = "README.md"
requires-python = ">=3.10"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.nvidia.com"
explicit = true

[dependency-groups]
infra = [
    "ansible>=10.7.0",
    "google-cloud-aiplatform>=1.90.0",
    "prompt-toolkit>=3.0.51",
    "pulumi>=3.163.0",
    "pulumi-gcp>=8.27.0",
    "yaspin>=3.1.0",
]
models = [
    "numpy>=1.26.0",
    "pillow>=11.0.0",
    "torch==2.6.0; sys_platform == 'linux'",
    "torchvision>=0.20.0; sys_platform == 'linux'",
    "setuptools>=70.2.0",
    "nvidia-modelopt[all]>=0.27.1; sys_platform == 'linux'",
    "tensorrt>=10.9.0.34",
]
web = [
    "google-cloud-aiplatform>=1.90.0",
    "streamlit>=1.44.1",
    "watchdog>=6.0.0",
]
